<resources>
    <string name="app_name">ChinaCompetition</string>
    <string name="title_client">Client</string>
    <string name="title_message">Message</string>
    <string name="title_freelancer">Freelancer</string>
    <string name="title_profile">MyProfile</string>
    <string name="title_category">카테고리</string>

    <!-- Ted Permission -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
