<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_client"
        android:icon="@drawable/icon_recommend"
        android:title="@string/title_client" />

    <item
        android:id="@+id/navigation_freelancer"
        android:icon="@drawable/icon_home"
        android:title="@string/title_freelancer" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/icon_message"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_me2"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/icon_category"
        android:title="@string/title_category" />

</menu>
